mensaje de validacion y un servicio para obtener plugins del usuario logueado

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,4 +30,13 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
+  activerecord:
+    attributes:
+      user:
+        email: "E-mail address"
+    errors:
+      models:
+        plugin:
+          attributes:
+            short_name:
+              unique: "already exists. Use another slug."
